html file updated

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <img src="images/image.jpg" alt="Molla Negash">
             <h1>Molla Negash</h1>
-            <p>Software Developer</p>
+            <p> Developer</p>
         </div>
     </header>
 
@@ -46,6 +46,7 @@
         • Microservices • RESTful WebServices • Web Applications • Spring Boot • Multi programing
     </section>
 
+    <a href="https://drive.google.com/file/d/https://docs.google.com/document/d/1Avl1_o22XElFKmqX0VEOaklxKKbmDOUe3ke6n0CJqaw/edit?usp=sharing/view" target="_blank">Resume PDF</a>
 
 
     <script src="scripts/script.js"></script>
