--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <img src="images/image.jpg" alt="Molla Negash">
             <h1>Molla Negash</h1>
-            <p> Developer</p>
+            <p> Software Developer</p>
         </div>
     </header>
 
