html file updated

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <!-- Add more sections for projects, skills, etc. -->
     <section class="container">
         <h2>My Projects</h2>
-       1. web scrapping
-       2. big data management
-       3. web development
-       4. application restructring
-       5. Api developemnt
+       1. web scrapping <br>
+       2. big data management<br>
+       3. web development<br>
+       4. application restructring<br>
+       5. Api developemnt<br>
     </section>
 
     <section class="container">
@@ -46,7 +46,7 @@
         • Microservices • RESTful WebServices • Web Applications • Spring Boot • Multi programing
     </section>
 
-    <a href="https://drive.google.com/file/d/https://docs.google.com/document/d/1Avl1_o22XElFKmqX0VEOaklxKKbmDOUe3ke6n0CJqaw/edit?usp=sharing/view" target="_blank">Resume PDF</a>
+   <p>clink the link to view the file: <a href="https://drive.google.com/file/d/https://docs.google.com/document/d/1Avl1_o22XElFKmqX0VEOaklxKKbmDOUe3ke6n0CJqaw/edit?usp=sharing/view" target="_blank">Resume PDF</a></p>
 
     <script src="scripts/script.js"></script>
 
