updated html file

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         • Microservices • RESTful WebServices • Web Applications • Spring Boot • Multi programing
     </section>
 
-    <p> Clik the link to view the file: <a href="https://drive.google.com/file/d/https://docs.google.com/document/d/1Avl1_o22XElFKmqX0VEOaklxKKbmDOUe3ke6n0CJqaw/edit?usp=sharing/view" target="_blank">Resume PDF</a></p>
-
+   <div> <p> Clik the link to view the file: <a href="https://drive.google.com/file/d/https://docs.google.com/document/d/1Avl1_o22XElFKmqX0VEOaklxKKbmDOUe3ke6n0CJqaw/edit?usp=sharing/view" target="_blank">Resume PDF</a></p>
+   </div>
     <script src="scripts/script.js"></script>
 
     <footer>
