--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
         <h2>Skills</h2>
         • Microservices • RESTful WebServices • Web Applications • Spring Boot • Multi programing
     </section>
-
-   <div> <p> Clik the link to view the file: <a href="https://drive.google.com/file/d/https://docs.google.com/document/d/1Avl1_o22XElFKmqX0VEOaklxKKbmDOUe3ke6n0CJqaw/edit?usp=sharing/view" target="_blank">Resume PDF</a></p>
-   </div>
+<a href="https://drive.google.com/file/d/https://docs.google.com/document/d/1Avl1_o22XElFKmqX0VEOaklxKKbmDOUe3ke6n0CJqaw/edit?usp=sharing/view" target="_blank">Resume PDF</a>
     <script src="scripts/script.js"></script>
 
     <footer>
