--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h2>Skills</h2>
         • Microservices • RESTful WebServices • Web Applications • Spring Boot • Multi programing
     </section>
-<a href="https://drive.google.com/file/d/https://docs.google.com/document/d/1Avl1_o22XElFKmqX0VEOaklxKKbmDOUe3ke6n0CJqaw/edit?usp=sharing/view" target="_blank">Resume PDF</a>
+<p>clik the link to view the file: ><a href="https://drive.google.com/file/d/https://docs.google.com/document/d/1Avl1_o22XElFKmqX0VEOaklxKKbmDOUe3ke6n0CJqaw/edit?usp=sharing/view" target="_blank">Resume PDF</a></p>
     <script src="scripts/script.js"></script>
 
     <footer>
