html file updated

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
          expectations. Solid user interface design skills centered on user-friendliness and
           streamlined performance. Able to effectively link back-end and front-end system components
            to deliver comprehensive business and web technologies that provide added functionality,
-            optimized productivity, and improved efficiency.
+            optimized productivity, and improved efficiency.My background in cloud computing, software development, and design would be relevant for Software Developer role.
+
+
         
         
         </p> 
@@ -37,7 +39,7 @@
        1. web scrapping <br>
        2. big data management<br>
        3. web development<br>
-       4. application restructring<br>
+       4. application restructuring<br>
        5. Api developemnt<br>
     </section>
 
