--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <title>Molla Negash - portfolio</title>
+    <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID"></script>
 </head>
 <body>
     <header>
@@ -42,7 +43,27 @@
        4. application restructuring<br>
        5. Api developemnt<br>
     </section>
-
+    <div id="paypal-button-container"></div>
+    
+    <script>
+        paypal.Buttons({
+            createOrder: function(data, actions) {
+                return actions.order.create({
+                    purchase_units: [{
+                        amount: {
+                            value: '10.00' // The total amount to charge the customer
+                        }
+                    }]
+                });
+            },
+            onApprove: function(data, actions) {
+                return actions.order.capture().then(function(details) {
+                    alert('Transaction completed by ' + details.payer.name.given_name);
+                    // Call your backend to complete the payment process
+                });
+            }
+        }).render('#paypal-button-container');
+    </script>
     <section class="container">
         <h2>Skills</h2>
         • Microservices • RESTful WebServices • Web Applications • Spring Boot • Multi programing
