--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
     </section>
     <scipt>
         <h2>courses</h2>
-
-        div class="container">
-         
-            <p> clik the link to view the file: ><a href="courses/courses.html" target="_blank">course file</a>
+            <p><a href="courses/courses.html" target="_blank">course</a>
             </p>
 
         </div>
