--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
     </section>
     <scipt>
         <h2>courses</h2>
-            <p><a href="courses/courses.html" target="_blank">course</a>
-            </p>
-
+          <div class="container">
+            <img src="images/code.png" alt="code">
+            <h1>expected out put</h1>
+            <img src="images/output.png" alt="code">
         </div>
 
         
