--- a/index.html
+++ b/index.html
@@ -52,16 +52,18 @@
     </section>
     <scipt>
         <h2>courses</h2>
-          <div class="container">
-            <img src="images/code.png" alt="code">
-            <h1>expected out put</h1>
-            <img src="images/output.png" alt="code">
+
+        div class="container">
+         
+            <p> clik the link to view the file: ><a href="courses/courses.html" target="_blank">course file</a>
+            </p>
+
         </div>
 
         
     </scipt>
-<p>clik the link to view the file: ><a href="https://drive.google.com/file/d/https://docs.google.com/document/d/1Avl1_o22XElFKmqX0VEOaklxKKbmDOUe3ke6n0CJqaw/edit?usp=sharing/view" target="_blank">Resume PDF</a>
-</p>
+
+<p>clik the link to view the file: ><a href="https://drive.google.com/file/d/https://docs.google.com/document/d/1Avl1_o22XElFKmqX0VEOaklxKKbmDOUe3ke6n0CJqaw/edit?usp=sharing/view" target="_blank">Resume PDF</a></p>
     <script src="scripts/script.js"></script>
 
     <footer>
