--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <scipt>
         <h2>courses</h2>
 
-        div class="container">
+        <div class="container">
          
             <p> clik the link to view the file: ><a href="courses/courses.html" target="_blank">course file</a>
             </p>
