--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="container">
          
-            <p> clik the link to view the file: ><a href="courses/courses.html" target="_blank">course file</a>
+            <p> clik the link to view the file:<a href="courses/courses.html" target="_blank">course file</a>
             </p>
 
         </div>
