--- a/courses/courses.html
+++ b/courses/courses.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Java Code Example</title>
+    <title>Java Code </title>
+    <style>
+        pre {
+            background-color: #f4f4f4;
+            padding: 10px;
+            border-radius: 5px;
+            overflow-x: auto;
+        }
+        code {
+            display: block;
+            white-space: pre-wrap;
+            font-family: "Courier New", Courier, monospace;
+        }
+    </style>
 </head>
 <body>
     <pre><code class="java">
 
-        // Online IDE - Code Editor, Compiler, Interpreter
+       
         import java.util.Scanner;
         import java.util.Arrays;
         
