items and html files updated

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header>
         <div class="container">
             <img src="images/image.jpg" alt="Molla Negash">
-            <h1>Molla Negash</h1>
-            <p> Software Developer</p>
+            <h1>Betselot Online Business</h1>
+            <p> G/S</p>
         </div>
     </header>
 
@@ -55,7 +55,7 @@
 
         <div class="container">
          
-            <p> clik the link to view the file:<a href="courses/courses.html" target="_blank">course file</a>
+            <p> clik the link to view the file:<a href="items/item.html" target="_blank">course file</a>
             </p>
 
         </div>
