--- a/index.html
+++ b/index.html
@@ -10,9 +10,33 @@
 
 </head>
 <body>
+    <header id="home">
+        <div class="container">
+            <!-- Logo -->
+            <div class="logo">
+                <img src="images/logo.jpg" alt="logo">
+            </div>
+    
+            <!-- Main Navigation -->
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#shop">Shop</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+    
+            <!-- Optional: Call-to-action Button -->
+            <div class="cta">
+                <a href="#shop" class="btn">Shop Now</a>
+            </div>
+        </div>
+    </header>
+
     <header>
         <div class="container">
-            <img src="images/image.jpg" alt="Molla Negash">
+            <img src="images/logo.jpg" alt="logo">
             <h1>Betselot Online Business</h1>
             <p> Welcome to our store!</p>
         </div>
