--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
     <header>
+        
         <div class="container">
+            <div class="logo">
+                <img src="images/logo.jpg" alt="logo">
+            </div>
+
             <h1>Betselot Online Business</h1>
             <nav>
                 <ul>
@@ -44,7 +49,7 @@
                 4. fashion
             </div>
         </section>
-        
+
         <div class="product">
             <img src="product1.jpg" alt="Product 1">
             <h3>Product 1</h3>
