--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         <div class="container">
             <div class="logo">
-                <img src="images/logo.jpg" alt="logo">
+                <img src="images/logo.jpg" alt="logo" class="logo-img">
             </div>
 <br>
             <h1>Betselot Online Business</h1>
