--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <section class="featured">
             <div class="container">
                 <h2>Featured Products</h2>
-                1. kids
-                2. men
-                3. women
-                4. fashion
+                <p>1. kids</p> 
+                <p>2. men</p>
+                <p>3. women</p> 
+                <p>4. fashion</p> 
             </div>
         </section>
 
