--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Online Retail Business</title>
     <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID"></script>
     <meta name="google-site-verification" content="AY4sqpV0JbgewjIGE6xVWLQoLN_K0GZU3-hYneq7WOM" />
-   
-    <i class="fa-light fa-b"></i>
+    <link rel="icon" href="path/to/your/icon.svg" type="image/svg+xml">
+    <FontAwesomeIcon icon="fa-solid fa-b" />
     <i class="fa-solid fa-cart-shopping"></i>
 
 </head>
