--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID"></script>
     <meta name="google-site-verification" content="AY4sqpV0JbgewjIGE6xVWLQoLN_K0GZU3-hYneq7WOM" />
     <link rel="icon" href="path/to/your/icon.svg" type="image/svg+xml">
-    <FontAwesomeIcon icon="fa-solid fa-b" />
-    <i class="fa-solid fa-cart-shopping"></i>
+    <link rel="icon" href="images/FibIcon.JPEG" type="FibIcon">
 
 </head>
 <body>
