--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Online Retail Business</title>
     <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID"></script>
     <meta name="google-site-verification" content="AY4sqpV0JbgewjIGE6xVWLQoLN_K0GZU3-hYneq7WOM" />
-    <link rel="icon" href="path/to/your/icon.svg" type="image/svg+xml">
     <link rel="icon" href="images/FibIcon.JPEG" type="FibIcon">
 
 </head>
@@ -69,6 +68,40 @@
         <!-- Add more products as needed -->
     </div>
 </section>
+<h1>Data Fetch Example</h1>
+    <div id="data-container">
+        <!-- Data will be inserted here -->
+    </div>
+
+    <script>
+        // Function to fetch data from the server
+        function fetchData() {
+            fetch('https://api.thecatapi.com/v1/')
+                .then(response => response.json())
+                .then(data => {
+                    // Process the fetched data
+                    const container = document.getElementById('data-container');
+                    // Clear previous data
+                    container.innerHTML = '';
+                    // Iterate over the data and create HTML elements to display it
+                    data.forEach(post => {
+                        const postElement = document.createElement('div');
+                        postElement.innerHTML = `
+                            <h2>${post.title}</h2>
+                            <p>${post.body}</p>
+                            <hr>
+                        `;
+                        container.appendChild(postElement);
+                    });
+                })
+                .catch(error => {
+                    console.error('Error fetching data:', error);
+                });
+        }
+
+        // Call fetchData when the page loads
+        window.onload = fetchData;
+    </script>
 
 <section id="about">
     <div class="container">
