--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <script>
         // Function to fetch data from the server
         function fetchData() {
-            fetch('https://api.thecatapi.com/v1/')
+            fetch(' https://api.covid19api.com/')
                 .then(response => response.json())
                 .then(data => {
                     // Process the fetched data
