--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ window.onload = fetchData;
 <footer>
         <div class="container">
             <p>&copy; 2024 Molla Negash | Designed by Molla Negash</p>
-            <p>Contact: mdraya3@gmail.com | Follow me on <a href="https://www.linkedin.com/in/mnegash/" target="_blank">linkedin</a></p>
+            <p>Contact: mdraya3@gmail.com | Follow me on <a href="https://www.linkedin.com/company/100522952/admin/feed/posts/" target="_blank">linkedin</a></p>
         </div>
     </footer>
 
