--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ window.onload = fetchData;
 <footer>
         <div class="container">
             <p>&copy; 2024 Molla Negash | Designed by Betselot Online Business</p>
-            <p>Contact: mdraya3@gmail.com | Follow me on <a href="https://www.linkedin.com/company/bet-ebusiness/?viewAsMember=true" target="_blank">linkedin</a></p>
+            <p>Contact: mdraya3@gmail.com | Follow us on <a href="https://www.linkedin.com/company/bet-ebusiness/?viewAsMember=true" target="_blank">linkedin</a></p>
         </div>
     </footer>
 
