--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
     <div class="container">
       <h2>Portfolio</h2>
       <p>github</p>
+    <p>Add your contact information and a contact form or email address for inquiries.</p>
+    <a href="https://github.com/mollanegash/" target="_blank">GitHub Profile</a>
+  </div>
+</section>
+" target="_blank">GitHub Profile</a>
+        </div>
+      </section>
+      
     </div>
   </section>
 
