--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="container">
             <h2>Resume</h2>
             <p>Add your resume content here, including your work experience, education, skills, etc.</p>
-            <a href="files/negashResume.pdf.pdf" target="_blank">Download Resume (PDF)</a>
+            <a href="files/negashResume.pdf" target="_blank">Download Resume (PDF)</a>
           </div>
         </section>
         
@@ -54,7 +54,7 @@
     <a href="https://github.com/mollanegash/" target="_blank">GitHub Profile</a>
   </div>
 </section>
-" target="_blank">GitHub Profile</a>
+
         </div>
       </section>
       
