--- a/index.html
+++ b/index.html
@@ -34,16 +34,50 @@
       <h2>Resume</h2>
       <p>
         EXPERIENCE
-        <ul>
-          <li><strong>Sr. Specialist: Software Engineering, LTIMindtree: Austin, TX</strong> (Jan 2023 - Current)
-            <ul>
-              <li>Implemented cloud service for intelligence, Payment System and mortgage product deployment: AWS (Cloudwatch, lambda:email handling, S3:APIs, EC2, SNS:messaging/alarms) and GCP;</li>
-              <li>Configured and migrated requirements to jira/confluence; implemented project development and management tools: maven, and jira supports agile methodology: kanban,scrum and backlog;</li>
-              <!-- Add more bullet points as needed -->
-            </ul>
-          </li>
-          <!-- Add more job experiences with similar structure -->
-        </ul>
+        <br>
+        Sr. Specialist: Software Engineering, LTIMindtree: Austin, TX (Jan 2023 - Current)<br>
+        ● Implemented cloud service for intelligence, Payment System and mortgage product deployment: AWS (Cloudwatch, lambda:email handling, S3:APIs, EC2, SNS:messaging/alarms) and GCP;<br>
+        ● Configured and migrated requirements to jira/confluence; implemented project development and management tools: maven, and jira supports agile methodology: kanban,scrum and backlog;<br>
+        ● Used IDE, languages, frameworks, development tools (CI/CD) and database for feature enhancement: intellij, eclipse, pycharm,VSCode, java/spring boot, python/django, javaScript/expressJS, typescript, php/laravel, kafka, redis and aws cli, aws k8s, docker, git, github actions and mysql, postgresql, MongoDb and aurora;<br>
+        ● Monitored synaptec daily search reports: hit/clear, data only and SQA searches on digital delve server;<br>
+        ● Updated, developed and deployed order search urls, AI/ML apis, Payment System, Mortgage Account, case level data web scraping applications and features (courtsmart improvement and data mapping) to S3 bucket;<br>
+        ● Identified logs and troubleshooted pending client orders using java, javascript, NodeJs, thymeleaf/angularJs/reactjs, cloudwatch, intellij IDE, redis cache, selenium and playwright, regression/mockito test;<br>
+        <br>
+        Java Developer, Tata Consultancy Service: Boston, MA (Nov 2021 - Dec 2022)<br>
+        ● Migrated monolithic API elements to modern container-based microservice architecture written in java, spring boot with kafka and reactJs;<br>
+        ● Built cloud native applications using google cloud and tools that leverage fully managed services;<br>
+        ● Developed and deployed backend insurance document management APIs;<br>
+        ● Troubleshooted, debugged and upgraded insurance software application;<br>
+        ● Monitored documentation processes and adhere to the coding standards as provided by TCS standards or as provided by the client;<br>
+        ● Analyzed insurance data on spark AI/ML APSs (python, SQL): statistical and inferential analysis on databricks platform;<br>
+        ● Performed unit tests as per the test plans and test cases to enhance code quality;<br>
+        <br>
+        Java Developer, Public Health Institute: Ethiopia (Aug 2013 – July 2016)<br>
+        ● Developed public health research applications using Spring MVC framework, JSP, html, CSS, and JavaScript;<br>
+        ● Developed REST based Microservices with Rest template/Web Client on RESTful APIs;<br>
+        ● Developed complex SQL statements and stored procedures with Oracle;<br>
+        ● Analyzed public health data using statistical and inferential analysis:R/python;<br>
+        ● Configured and managed RDBMs like Microsoft SQL Server, Oracle Database, MySQL;<br>
+        ● Developed applications in AWS – migrate applications to cloud;<br>
+        <br>
+        Java Developer, Ministry of Science and Technology: Ethiopia (Nov 2011 – Aug 2013)<br>
+        ● Designed professional UI web applications using front-end technologies: HTML/HTML5, CSS/CSS3, JavaScript, XML, jQuery, AJAX, JSON, AXIOS;<br>
+        ● Developed Java API to interact with the Amazon SQS used in sending bulk emails;<br>
+        ● Developed presentation layer using JSP, HTML, CSS, AJAX, JavaScript;<br>
+        ● Developed additional UI Components using JSF and implemented an asynchronous, AJAX (jQuery) based rich client to improve customer experience;<br>
+        ● Designed database, data modeling and performance tuning and stored procedures, functions and triggers and applied CRUD using oracle and SQL Server;<br>
+        <br>
+        Java Developer, City Government of Addis Ababa: Ethiopia (Mar 2010 – Nov 2011)<br>
+        ● Implemented JSF framework in the application which is based on MVC design architecture on fleet management system;<br>
+        ● Developed Enterprise JavaBeans (EJB), MVC, JDBC, Spring with Hibernate, AJAX for search panel, Java Swing & AWT for desktop app;<br>
+        ● Designed and implemented user interface using JSP, Servlets, JavaScript, HTML, CSS, and AJAX on real time tracking system for waste collecting vehicles;<br>
+        ● Developed use case diagrams, class diagrams, database tables, and provided mapping between relational database tables and object-oriented java objects using Hibernate;<br>
+        ● Developed user interface using JSP, HTML, CSS, and JavaScript to simplify the complexities of applications;<br>
+        ● Developed fleet management system software to support a large-scale IT system with Linux- based servers, Amazon Web Services (AWS) cloud instances, and Oracle and/or Postgres databases;<br>
+        <br>
+        EDUCATION<br>
+        Boston University | Boston, MA, US | May 2021 | MS in Computer Science<br>
+        Mekelle University | Mekelle, Ethiopia | July 2009 | BSc in Economics<br>
       </p>
       <a href="files/negashResume.pdf" target="_blank">Download Resume (PDF)</a>
     </div>
@@ -52,7 +86,7 @@
   <section id="portfolio">
     <div class="container">
       <h2>Portfolio</h2>
-      <p>Github</p>
+      <p>GitHub</p>
       <a href="https://github.com/mollanegash/" target="_blank">GitHub Profile</a>
     </div>
   </section>
@@ -60,8 +94,8 @@
   <section id="contact">
     <div class="container">
       <h2>Contact Me</h2>
-      <p>mdraya3@gmail.com</p>
-      <p>617-318-7005</p>
+      <p>Email: mdraya3@gmail.com</p>
+      <p>Phone: 617-318-7005</p>
     </div>
   </section>
 
