--- a/index.html
+++ b/index.html
@@ -3,14 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Personal Website</title>
+  <title>Resume | Molla Negash</title>
   <link rel="stylesheet" href="styles/style.css"> <!-- Link to your CSS file for styling -->
+  <style>
+    /* Additional CSS for alignment */
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 0 20px;
+    }
+
+    h1, h2 {
+      color: #1A0DAB;
+    }
+
+    h2 {
+      border-bottom: 2px solid #1A0DAB;
+      padding-bottom: 5px;
+    }
+
+    section {
+      margin-bottom: 30px;
+    }
+
+    p {
+      line-height: 1.6;
+    }
+
+    ul {
+      margin: 0;
+      padding-left: 20px;
+    }
+
+    ul ul {
+      padding-left: 40px;
+    }
+
+    a {
+      color: #1A0DAB;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px 0;
+      background-color: #f1f1f1;
+    }
+  </style>
 </head>
 <body>
 
   <header>
     <div class="container">
-      <h1>Your Name</h1>
+      <h1>Molla Negash</h1>
       <nav>
         <ul>
           <li><a href="#about">About</a></li>
@@ -33,49 +86,53 @@
     <div class="container">
       <h2>Resume</h2>
       <p>
-        EXPERIENCE
+        <strong>EXPERIENCE</strong><br>
+        <strong>Sr. Specialist: Software Engineering, LTIMindtree</strong><br>
+        <em>Austin, TX | Jan 2023 - Current</em><br>
+        - Implemented cloud service for intelligence, Payment System and mortgage product deployment: AWS (Cloudwatch, lambda:email handling, S3:APIs, EC2, SNS:messaging/alarms) and GCP;<br>
+        - Configured and migrated requirements to jira/confluence; implemented project development and management tools: maven, and jira supports agile methodology: kanban,scrum and backlog;<br>
+        - Used IDE, languages, frameworks, development tools (CI/CD) and database for feature enhancement: intellij, eclipse, pycharm,VSCode, java/spring boot, python/django, javaScript/expressJS, typescript, php/laravel, kafka, redis and aws cli, aws k8s, docker, git, github actions and mysql, postgresql, MongoDb and aurora;<br>
+        - Monitored synaptec daily search reports: hit/clear, data only and SQA searches on digital delve server;<br>
+        - Updated, developed and deployed order search urls, AI/ML apis, Payment System, Mortgage Account, case level data web scraping applications and features (courtsmart improvement and data mapping) to S3 bucket;<br>
+        - Identified logs and troubleshooted pending client orders using java, javascript, NodeJs, thymeleaf/angularJs/reactjs, cloudwatch, intellij IDE, redis cache, selenium and playwright, regression/mockito test;<br>
         <br>
-        Sr. Specialist: Software Engineering, LTIMindtree: Austin, TX (Jan 2023 - Current)<br>
-        ● Implemented cloud service for intelligence, Payment System and mortgage product deployment: AWS (Cloudwatch, lambda:email handling, S3:APIs, EC2, SNS:messaging/alarms) and GCP;<br>
-        ● Configured and migrated requirements to jira/confluence; implemented project development and management tools: maven, and jira supports agile methodology: kanban,scrum and backlog;<br>
-        ● Used IDE, languages, frameworks, development tools (CI/CD) and database for feature enhancement: intellij, eclipse, pycharm,VSCode, java/spring boot, python/django, javaScript/expressJS, typescript, php/laravel, kafka, redis and aws cli, aws k8s, docker, git, github actions and mysql, postgresql, MongoDb and aurora;<br>
-        ● Monitored synaptec daily search reports: hit/clear, data only and SQA searches on digital delve server;<br>
-        ● Updated, developed and deployed order search urls, AI/ML apis, Payment System, Mortgage Account, case level data web scraping applications and features (courtsmart improvement and data mapping) to S3 bucket;<br>
-        ● Identified logs and troubleshooted pending client orders using java, javascript, NodeJs, thymeleaf/angularJs/reactjs, cloudwatch, intellij IDE, redis cache, selenium and playwright, regression/mockito test;<br>
+        <strong>Java Developer, Tata Consultancy Service</strong><br>
+        <em>Boston, MA | Nov 2021 - Dec 2022</em><br>
+        - Migrated monolithic API elements to modern container-based microservice architecture written in java, spring boot with kafka and reactJs;<br>
+        - Built cloud native applications using google cloud and tools that leverage fully managed services;<br>
+        - Developed and deployed backend insurance document management APIs;<br>
+        - Troubleshooted, debugged and upgraded insurance software application;<br>
+        - Monitored documentation processes and adhere to the coding standards as provided by TCS standards or as provided by the client;<br>
+        - Analyzed insurance data on spark AI/ML APSs (python, SQL): statistical and inferential analysis on databricks platform;<br>
+        - Performed unit tests as per the test plans and test cases to enhance code quality;<br>
         <br>
-        Java Developer, Tata Consultancy Service: Boston, MA (Nov 2021 - Dec 2022)<br>
-        ● Migrated monolithic API elements to modern container-based microservice architecture written in java, spring boot with kafka and reactJs;<br>
-        ● Built cloud native applications using google cloud and tools that leverage fully managed services;<br>
-        ● Developed and deployed backend insurance document management APIs;<br>
-        ● Troubleshooted, debugged and upgraded insurance software application;<br>
-        ● Monitored documentation processes and adhere to the coding standards as provided by TCS standards or as provided by the client;<br>
-        ● Analyzed insurance data on spark AI/ML APSs (python, SQL): statistical and inferential analysis on databricks platform;<br>
-        ● Performed unit tests as per the test plans and test cases to enhance code quality;<br>
+        <strong>Java Developer, Public Health Institute</strong><br>
+        <em>Ethiopia | Aug 2013 – July 2016</em><br>
+        - Developed public health research applications using Spring MVC framework, JSP, html, CSS, and JavaScript;<br>
+        - Developed REST based Microservices with Rest template/Web Client on RESTful APIs;<br>
+        - Developed complex SQL statements and stored procedures with Oracle;<br>
+        - Analyzed public health data using statistical and inferential analysis:R/python;<br>
+        - Configured and managed RDBMs like Microsoft SQL Server, Oracle Database, MySQL;<br>
+        - Developed applications in AWS – migrate applications to cloud;<br>
         <br>
-        Java Developer, Public Health Institute: Ethiopia (Aug 2013 – July 2016)<br>
-        ● Developed public health research applications using Spring MVC framework, JSP, html, CSS, and JavaScript;<br>
-        ● Developed REST based Microservices with Rest template/Web Client on RESTful APIs;<br>
-        ● Developed complex SQL statements and stored procedures with Oracle;<br>
-        ● Analyzed public health data using statistical and inferential analysis:R/python;<br>
-        ● Configured and managed RDBMs like Microsoft SQL Server, Oracle Database, MySQL;<br>
-        ● Developed applications in AWS – migrate applications to cloud;<br>
+        <strong>Java Developer, Ministry of Science and Technology</strong><br>
+        <em>Ethiopia | Nov 2011 – Aug 2013</em><br>
+        - Designed professional UI web applications using front-end technologies: HTML/HTML5, CSS/CSS3, JavaScript, XML, jQuery, AJAX, JSON, AXIOS;<br>
+        - Developed Java API to interact with the Amazon SQS used in sending bulk emails;<br>
+        - Developed presentation layer using JSP, HTML, CSS, AJAX, JavaScript;<br>
+        - Developed additional UI Components using JSF and implemented an asynchronous, AJAX (jQuery) based rich client to improve customer experience;<br>
+        - Designed database, data modeling and performance tuning and stored procedures, functions and triggers and applied CRUD using oracle and SQL Server;<br>
         <br>
-        Java Developer, Ministry of Science and Technology: Ethiopia (Nov 2011 – Aug 2013)<br>
-        ● Designed professional UI web applications using front-end technologies: HTML/HTML5, CSS/CSS3, JavaScript, XML, jQuery, AJAX, JSON, AXIOS;<br>
-        ● Developed Java API to interact with the Amazon SQS used in sending bulk emails;<br>
-        ● Developed presentation layer using JSP, HTML, CSS, AJAX, JavaScript;<br>
-        ● Developed additional UI Components using JSF and implemented an asynchronous, AJAX (jQuery) based rich client to improve customer experience;<br>
-        ● Designed database, data modeling and performance tuning and stored procedures, functions and triggers and applied CRUD using oracle and SQL Server;<br>
+        <strong>Java Developer, City Government of Addis Ababa</strong><br>
+        <em>Ethiopia | Mar 2010 – Nov 2011</em><br>
+        - Implemented JSF framework in the application which is based on MVC design architecture on fleet management system;<br>
+        - Developed Enterprise JavaBeans (EJB), MVC, JDBC, Spring with Hibernate, AJAX for search panel, Java Swing & AWT for desktop app;<br>
+        - Designed and implemented user interface using JSP, Servlets, JavaScript, HTML, CSS, and AJAX on real time tracking system for waste collecting vehicles;<br>
+        - Developed use case diagrams, class diagrams, database tables, and provided mapping between relational database tables and object-oriented java objects using Hibernate;<br>
+        - Developed user interface using JSP, HTML, CSS, and JavaScript to simplify the complexities of applications;<br>
+        - Developed fleet management system software to support a large-scale IT system with Linux- based servers, Amazon Web Services (AWS) cloud instances, and Oracle and/or Postgres databases;<br>
         <br>
-        Java Developer, City Government of Addis Ababa: Ethiopia (Mar 2010 – Nov 2011)<br>
-        ● Implemented JSF framework in the application which is based on MVC design architecture on fleet management system;<br>
-        ● Developed Enterprise JavaBeans (EJB), MVC, JDBC, Spring with Hibernate, AJAX for search panel, Java Swing & AWT for desktop app;<br>
-        ● Designed and implemented user interface using JSP, Servlets, JavaScript, HTML, CSS, and AJAX on real time tracking system for waste collecting vehicles;<br>
-        ● Developed use case diagrams, class diagrams, database tables, and provided mapping between relational database tables and object-oriented java objects using Hibernate;<br>
-        ● Developed user interface using JSP, HTML, CSS, and JavaScript to simplify the complexities of applications;<br>
-        ● Developed fleet management system software to support a large-scale IT system with Linux- based servers, Amazon Web Services (AWS) cloud instances, and Oracle and/or Postgres databases;<br>
-        <br>
-        EDUCATION<br>
+        <strong>EDUCATION</strong><br>
         Boston University | Boston, MA, US | May 2021 | MS in Computer Science<br>
         Mekelle University | Mekelle, Ethiopia | July 2009 | BSc in Economics<br>
       </p>
