--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume | Molla Negash</title>
-  <link rel="stylesheet" href="styles/style.css"> <!-- Link to your CSS file for styling -->
   <style>
-    /* Additional CSS for alignment */
     body {
       font-family: Arial, sans-serif;
+      background-color: #f1f1f1;
     }
 
     .container {
       max-width: 800px;
       margin: 0 auto;
       padding: 0 20px;
+      background-color: #fff;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      padding-bottom: 20px;
+      margin-bottom: 30px;
     }
 
     h1, h2 {
@@ -28,6 +33,8 @@
 
     section {
       margin-bottom: 30px;
+      padding: 20px;
+      border-bottom: 1px solid #ccc;
     }
 
     p {
@@ -56,6 +63,7 @@
       text-align: center;
       padding: 20px 0;
       background-color: #f1f1f1;
+      border-top: 1px solid #ccc;
     }
   </style>
 </head>
