--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
       border-top: 1px solid #ccc;
     }
   </style>
+  <link rel="icon" href="images/fi.png" type="image/x-icon">
+
 </head>
 <body>
 
