--- a/index.html
+++ b/index.html
@@ -171,7 +171,20 @@
     <div class="container">
       <p>&copy; 2024 Molla Negash. All rights reserved.</p>
     </div>
+
+
+
+    <div class="container">
+      <h2>Business</h2>
+      <p>Store</p>
+      <a href="https://betselotebusiness.github.io/" target="_blank">business</a>
+    </div>
+
   </footer>
+
+  
+    
+  
 
 </body>
 </html>
