--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <div class="container">
       <h2>Business</h2>
       <p>Store</p>
-      <a href="https://betselotebusiness.github.io/" target="_blank">business</a>
+      <a href="https://betsimart.github.io/" target="_blank">business</a>
     </div>
 
   </footer>
