--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <footer>
     <div class="container">
       <p>&copy; 2024 Molla Negash. All rights reserved.</p>
-      <p>Visit my online store: <a href="https://betsimart.github.io/" target="_blank">Betsi Mart</a></p>
+      <p>Visit my online store: <a href="https://betsiecohub.github.io/" target="_blank">Betsi Mart</a></p>
     </div>
 
 
