--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <footer>
     <div class="container">
       <p>&copy; 2024 Molla Negash. All rights reserved.</p>
-      <p>Visit my online store: <a href="https://betsiecohub.github.io/" target="_blank">https://betsiecohub.github.io/</a></p>
+      <p>Book an appointment: <a href="https://betsiecohub.com/" target="_blank">https://betsiecohub.com/</a></p>
     </div>
 
 
