--- a/index.html
+++ b/index.html
@@ -153,8 +153,16 @@
 
   <section id="portfolio">
     <div class="container">
-      <h2>Portfolio</h2>
+      <h2>GitHub Profile</h2>
       <a href="https://github.com/mollanegash/" target="_blank">GitHub Profile</a>
+      <h2>Repositories:</h2>
+  
+      <a href="https://github.com/mollanegash/college-student-management-web-app" target="_blank">College Student Management Web App</a>
+      <a href=" https://github.com/mollanegash/filesystem" target="_blank">FilesystemChained: Efficient Hash Table Implementation</a>
+       <a href="https://github.com/mollanegash/income-tax-calculator-php" target="_blank">Income Tax Calculator</a>
+
+      
+     
     </div>
   </section>
 
