--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
       <a href="https://github.com/mollanegash/" target="_blank">GitHub Profile</a>
       <h2>Repositories:</h2>
   
-      <a href="https://github.com/mollanegash/college-student-management-web-app" target="_blank">College Student Management Web App</a>
-      <a href=" https://github.com/mollanegash/filesystem" target="_blank">FilesystemChained: Efficient Hash Table Implementation</a>
+      <a href="https://github.com/mollanegash/college-student-management-web-app" target="_blank">College Student Management Web App</a><br>
+      <a href=" https://github.com/mollanegash/filesystem" target="_blank">FilesystemChained: Efficient Hash Table Implementation</a><br>
        <a href="https://github.com/mollanegash/income-tax-calculator-php" target="_blank">Income Tax Calculator</a>
 
       
