--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <strong>CONTACT INFORMATION</strong><br>
         Email: mdraya3@gmail.com | Phone: +1-617-318-7005 | GitHub: <a href="https://github.com/mollanegash" target="_blank">mollanegash</a>
       </p>
-      <a href="Molla_Negash_resume.pdf" download>Download Resume</a>
+      <a href="Molla Negash - Java Developer Resume.pdf" download>Download Resume</a>
     </div>
   </section>
 
