--- a/index.html
+++ b/index.html
@@ -163,20 +163,33 @@
         <strong>CONTACT INFORMATION</strong><br>
         Email: mdraya3@gmail.com | Phone: +1-617-318-7005 | GitHub: <a href="https://github.com/mollanegash" target="_blank">mollanegash</a>
       </p>
+      
+      p>
+      <a href="mailto:mdraya3@gmail.com?subject=Resume Request - Molla Negash">Request Resume</a>
+    </p>
     </div>
   </section>
+<section id="portfolio">
+  <div class="container">
+    <h2>GitHub Profile</h2>
+    <a href="https://github.com/mollanegash/" target="_blank">GitHub Profile</a>
+    <h2>Repositories:</h2>
 
-  <section id="portfolio">
-    <div class="container">
-      <h2>GitHub Profile</h2>
-      <a href="https://github.com/mollanegash/" target="_blank">GitHub Profile</a>
-      <h2>Repositories:</h2>
-  
-      <a href="https://github.com/mollanegash/college-student-management-web-app" target="_blank">College Student Management Web App</a><br>
-      <a href="https://github.com/mollanegash/filesystem" target="_blank">FilesystemChained: Efficient Hash Table Implementation</a><br>
-      <a href="https://github.com/mollanegash/income-tax-calculator-php" target="_blank">Income Tax Calculator</a>
-    </div>
-  </section>
+    <h3>Backend Development:</h3>
+    
+
+    <a href="https://github.com/mollanegash/EduExcellence-School-Management-System" target="_blank">EduExcellence-School-Management-System</a> (Java, Spring Boot)
+    <a href="https://github.com/mollanegash/Employee-Management-System-EMS-" target="_blank">Employee Management System (EMS)</a> (Java, Spring Boot)
+
+    Other Projects:
+
+    <a href="https://github.com/mollanegash/college-student-management-web-app" target="_blank">College Student Management Web App</a>
+    <a href="https://github.com/mollanegash/filesystem" target="_blank">FilesystemChained: Efficient Hash Table Implementation</a>
+    <a href="https://github.com/mollanegash/income-tax-calculator-php" target="_blank">Income Tax Calculator</a>
+    <a href="https://github.com/mollanegash/project-portal" target="_blank">Computer Science Project Portal</a>
+
+  </div>
+</section>
 
   <section id="contact">
     <div class="container">
