--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <a href="https://github.com/mollanegash/EduExcellence-School-Management-System" target="_blank">EduExcellence-School-Management-System</a> (Java, Spring Boot)<br>
     <a href="https://github.com/mollanegash/Employee-Management-System-EMS-" target="_blank">Employee Management System (EMS)</a> (Java, Spring Boot)<br>
 
-    Other Projects:
+    <h3>Other Projects:<h3>
 
     <br><a href="https://github.com/mollanegash/college-student-management-web-app" target="_blank">College Student Management Web App</a>
    <br> <a href="https://github.com/mollanegash/filesystem" target="_blank">FilesystemChained: Efficient Hash Table Implementation</a>
