--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
   </section>
 <section id="portfolio">
   <div class="container">
-    <h2>GitHub Profile</h2>
-    <a href="https://github.com/mollanegash/" target="_blank">GitHub Profile</a>
+   
     <h2>Repositories:</h2>
 
     <h3>Backend Development:</h3>
@@ -183,20 +182,25 @@
 
     <h3>Other Projects:<h3>
 
-    <br><a href="https://github.com/mollanegash/college-student-management-web-app" target="_blank">College Student Management Web App</a>
+   <a href="https://github.com/mollanegash/college-student-management-web-app" target="_blank">College Student Management Web App</a>
    <br> <a href="https://github.com/mollanegash/filesystem" target="_blank">FilesystemChained: Efficient Hash Table Implementation</a>
    <br> <a href="https://github.com/mollanegash/income-tax-calculator-php" target="_blank">Income Tax Calculator</a>
-    <a href="https://github.com/mollanegash/project-portal" target="_blank">Computer Science Project Portal</a>
-
+    <br><a href="https://github.com/mollanegash/project-portal" target="_blank">Computer Science Project Portal</a>
+ <h2>GitHub Profile</h2>
+    <a href="https://github.com/mollanegash/" target="_blank">GitHub Profile</a>
   </div>
 </section>
 
   <section id="contact">
-    <div class="container">
-      <h2>Contact</h2>
-      <p>Feel free to reach out to me at <a href="mailto:mdraya3@gmail.com">mdraya3@gmail.com</a> or call me at +1-617-318-7005.</p>
-    </div>
-  </section>
+  <div class="container">
+    <h2>Contact</h2>
+    <form action="mailto:mdraya3@gmail.com?subject=Hire Me Inquiry - [Your Name]" method="post" enctype="text/plain">
+      <label for="message">Let's discuss your project:</label>
+      <textarea id="message" name="message" rows="5" placeholder="Enter your message"></textarea>
+      <button type="submit" class="hire-me-btn">Hire Me</button>
+    </form>
+  </div>
+</section>
 
   <footer>
     <div class="container">
