--- a/index.html
+++ b/index.html
@@ -191,16 +191,7 @@
   </div>
 </section>
 
-  <section id="contact">
-  <div class="container">
-    <h2>Contact</h2>
-    <form action="mailto:mdraya3@gmail.com?subject=Hire Me Inquiry - [Your Name]" method="post" enctype="text/plain">
-      <label for="message">Let's discuss your project:</label>
-      <textarea id="message" name="message" rows="5" placeholder="Enter your message"></textarea>
-      <button type="submit" class="hire-me-btn">Hire Me</button>
-    </form>
-  </div>
-</section>
+ <p>Feel free to reach out to me at <a href="mailto:mdraya3@gmail.com?subject=Hire Me Inquiry - [Your Name]">mdraya3@gmail.com</a> or call me at +1-617-318-7005.</p>
 
   <footer>
     <div class="container">
