--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </ul>
         <br>
         
-        i class="fas fa-briefcase"></i> **Senior Java Developer | LTIMindtree**<br>
+        <i class="fas fa-briefcase"></i> Senior Java Developer | LTIMindtree<br>
         <em>Austin, TX | Jan 2023 - Nov 2023</em><br>
         <ul>
           <li>Designed and developed banking applications with new functionalities and seamless back-end integration.</li>
@@ -197,9 +197,12 @@
     <h3>Other Projects:<h3>
 
    <a href="https://github.com/mollanegash/college-student-management-web-app" target="_blank">College Student Management Web App</a>
-   <br> <a href="https://github.com/mollanegash/filesystem" target="_blank">FilesystemChained: Efficient Hash Table Implementation</a>
-   <br> <a href="https://github.com/mollanegash/income-tax-calculator-php" target="_blank">Income Tax Calculator</a>
-    <br><a href="https://github.com/mollanegash/project-portal" target="_blank">Computer Science Project Portal</a>
+   <br> 
+      <a href="https://github.com/mollanegash/filesystem" target="_blank">FilesystemChained: Efficient Hash Table Implementation</a>
+   <br> 
+      <a href="https://github.com/mollanegash/income-tax-calculator-php" target="_blank">Income Tax Calculator</a>
+    <br>
+      <a href="https://github.com/mollanegash/project-portal" target="_blank">Computer Science Project Portal</a>
       
  <h2>GitHub Profile</h2>
     <a href="https://github.com/mollanegash/" target="_blank">GitHub Profile</a>
