--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
     <li>Communication: Excellent verbal and written communication skills, adept at collaborating with cross-functional teams.</li>
   </ul>
         
-    
-     <div class="container">
+    <section id="Contact">
+    <div class="container">
       <h2>CONTACT INFORMATION</h2>
      Email: mdraya3@gmail.com | Phone: +1-617-318-7005 | GitHub: <a href="https://github.com/mollanegash" target="_blank">mollanegash</a>
       </p>
