--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
     <a href="https://github.com/mollanegash/EduExcellence-School-Management-System" target="_blank">EduExcellence-School-Management-System</a> (Java, Spring Boot)<br>
     <a href="https://github.com/mollanegash/Employee-Management-System-EMS-" target="_blank">Employee Management System (EMS)</a> (Java, Spring Boot)<br>
 
+     <a href="https://github.com/mollanegash/ML-ETL-Project" target="_blank">Machine Learning Project</a> (python, jupter notbook,databricks)<br>
+
+
     <h3>Other Projects:<h3>
 
    <a href="https://github.com/mollanegash/college-student-management-web-app" target="_blank">College Student Management Web App</a>
