--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#resume">Resume</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#Contact">Contact</a></li>
         </ul>
       </nav>
     </div>
