--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         AWS Certified Cloud Specialist - Technical<br><br>
         
          <strong>EXPERIENCE</strong><br>
-        <i class="fas fa-briefcase"></i> Manager | Betsi Eco Hub LLC<br>
+        <i class="fas fa-briefcase"></i> Tech Lead  | Betsi Eco Hub LLC<br>
         <em>Austin, TX | December 2023 - Present</em><br>
         <ul>
           <li>Spearheaded the development and maintenance of the company website, employing technologies including HTML, CSS, PHP, and MySQL.</li>
@@ -171,7 +171,7 @@
         BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
         
         <ul>
-    <li>Programming & Technologies: Java, Spring, Spring Boot, Hibernate, Python, R, JavaScript, HTML, CSS, PHP, MySQL.</li>
+    <li> <strong>EDUCATION</strong><br>Programming & Technologies: Java, Spring, Spring Boot, Hibernate, Python, R, JavaScript, HTML, CSS, PHP, MySQL.</li>
     <li>AI/ML & Big Data: Experience with machine learning algorithms, Databricks, Apache Spark, and data processing using Python and R.</li>
     <li>Communication: Excellent verbal and written communication skills, adept at collaborating with cross-functional teams.</li>
   </ul>
