--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
         
         <ul>
-    <li> <strong>ADDITIONAL SKILLS
+    <strong>ADDITIONAL SKILLS<br>
 </strong><br>Programming & Technologies: Java, Spring, Spring Boot, Hibernate, Python, R, JavaScript, HTML, CSS, PHP, MySQL.</li>
 <li><strong>Database & Reporting:** SSRS Reports (skilled in developing and maintaining for business intelligence and data analysis)</li>
 <li>AI/ML & Big Data: Experience with machine learning algorithms, Databricks, Apache Spark, and data processing using Python and R.</li>
