--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
          
         </ul>
         
-        <strong>EDUCATION</strong><br>
+       <br> <strong>EDUCATION</strong><br>
 MS in Computer Science | Boston University | Boston, MA | May 2021<br>
 BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
 
