--- a/index.html
+++ b/index.html
@@ -180,13 +180,20 @@
 MS in Computer Science | Boston University | Boston, MA | May 2021<br>
 BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
 
-<strong>ADDITIONAL SKILLS</strong><br>
-<ul>
-    <li>Programming & Technologies: Java, Spring, Spring Boot, Hibernate, Python, R, JavaScript, HTML, CSS, PHP, MySQL.</li>
-    <li>Database & Reporting: SSRS Reports (skilled in developing and maintaining for business intelligence and data analysis).</li>
-    <li>AI/ML & Big Data: Experience with machine learning algorithms, Databricks, Apache Spark, and data processing using Python and R.</li>
-    <li>Communication: Excellent verbal and written communication skills, adept at collaborating with cross-functional teams.</li>
-</ul>
+
+      <section id="skills">
+  <div class="container">
+    <strong>Technical Skills</strong>strong
+    <ul class="skills-list">
+      <li>Programming Languages: Java (Expert), Python (Advanced), R (Intermediate)</li>
+      <li>Frameworks & Libraries: Spring Boot (Expert), Spring (Advanced), React (Intermediate)</li>
+      <li>Databases & Reporting: MySQL (Expert), PostgreSQL (Advanced), SSRS (Proficient)</li>
+      <li>Cloud Platforms: AWS (Advanced), GCP (Basic)</li>
+      <li>AI/ML & Big Data: Machine Learning Algorithms (Basic), Databricks (Intermediate)</li>
+      <li>Version Control: Git (Expert)</li>
+    </ul>
+  </div>
+</section>
 
         
     <section id="Contact">
