--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
 
       <section id="skills">
   <div class="container">
-    <strong>Technical Skills</strong>strong
+    <strong>Technical Skills</strong>
     <ul class="skills-list">
       <li>Programming Languages: Java (Expert), Python (Advanced), R (Intermediate)</li>
       <li>Frameworks & Libraries: Spring Boot (Expert), Spring (Advanced), React (Intermediate)</li>
