--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
     <strong>Technical Skills</strong>
     <ul class="skills-list">
       <li>Programming Languages: Java (Expert), Python (Advanced), R (Intermediate)</li>
-      <li>Frameworks & Libraries: Spring Boot (Expert), Spring (Advanced), React (Intermediate)</li>
+      <li>Frameworks & Libraries: Spring Boot (Expert), Spring (Advanced), React (Intermediate),Angular(Intermediate)</li>
       <li>Databases & Reporting: MySQL (Expert), PostgreSQL (Advanced), SSRS (Proficient)</li>
       <li>Cloud Platforms: AWS (Advanced), GCP (Basic)</li>
       <li>AI/ML & Big Data: Machine Learning Algorithms (Basic), Databricks (Intermediate)</li>
