--- a/index.html
+++ b/index.html
@@ -206,13 +206,52 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
       <p>Feel free to reach out to me at <a href="mailto:mdraya3@gmail.com">mdraya3@gmail.com</a> or call me at +1-617-318-7005.</p>
     </div> 
   </section>
-<section id="portfolio"> <div class="container"> 
-  <h2>Repositories:</h2>
-  <h3>Backend Development:</h3>
-  <ul> <li><strong><a href="href="https://github.com/mollanegash/EduExcellence-School-Management-System" target="_blank">EduExcellence-School-Management-System</a></strong> (Java, Spring Boot)</li> <li><strong><a href="https://github.com/mollanegash/Employee-Management-System-EMS-"  target="_blank">Employee Management System (EMS)</a></strong> (Java, Spring Boot)</li> <li><strong><a href="https://github.com/mollanegash/ML-ETL-Project" target="_blank">Machine Learning Project</a></strong> (python, jupter notbook,databricks)</li> </ul>
-  <h3>Other Projects:</h3> 
-  <ul> <li><strong><a href="https://github.com/mollanegash/college-student-management-web-app"  target="_blank">College Student Management Web App</a></strong></li> <li><strong><a href="https://github.com/mollanegash/filesystem"  target="_blank">FilesystemChained: Efficient Hash Table Implementation</a></strong></li> <li><strong><a href="https://github.com/mollanegash/income-tax-calculator-php"target="_blank">Income Tax Calculator</a></strong></li> <li><strong><a href="https://github.com/mollanegash/project-portal"  target="_blank">Computer Science Project Portal</a></strong></li> </ul> <h2>GitHub Profile</h2> <ul> <li><strong><a href="https://github.com/mollanegash/" target=" target="_blank">GitHub Profile</a></strong></li> </ul> </div> </section>
+<section id="portfolio">
+  <div class="container">
+    <h2>Repositories:</h2>
+    <h3>Backend Development:</h3>
+    <ul>
+      <li>
+        <strong><a href="https://github.com/mollanegash/EduExcellence-School-Management-System" target="_blank">EduExcellence-School-Management-System (Java, Spring Boot)</a></strong>
+        <p>**Description:** (Replace with a brief description of the project's purpose, functionalities, and your role.)</p>
+        </li>
+      <li>
+        <strong><a href="https://github.com/mollanegash/Employee-Management-System-EMS-" target="_blank">Employee Management System (EMS) (Java, Spring Boot)</a></strong>
+        <p>**Description:** (Replace with a brief description of the project's purpose, functionalities, and your role.)</p>
+        </li>
+      <li>
+        <strong><a href="https://github.com/mollanegash/ML-ETL-Project" target="_blank">Machine Learning Project (python, jupter notbook,databricks)</a></strong>
+        <p>**Description:** (Replace with a brief description of the project's purpose, functionalities, and your role.)</p>
+        </li>
+    </ul>
 
+    <h3>Other Projects:</h3>
+    <ul>
+      <li>
+        <strong><a href="https://github.com/mollanegash/college-student-management-web-app" target="_blank">College Student Management Web App</a></strong>
+        <p>**Description:** (Replace with a brief description of the project.)</p>
+        </li>
+      <li>
+        <strong><a href="https://github.com/mollanegash/filesystem" target="_blank">FilesystemChained: Efficient Hash Table Implementation</a></strong>
+        <p>**Description:** (Replace with a brief description of the project.)</p>
+        </li>
+      <li>
+        <strong><a href="https://github.com/mollanegash/income-tax-calculator-php" target="_blank">Income Tax Calculator</a></strong>
+        <p>**Description:** (Replace with a brief description of the project.)</p>
+        </li>
+      <li>
+        <strong><a href="https://github.com/mollanegash/project-portal" target="_blank">Computer Science Project Portal</a></strong>
+        <p>**Description:** (Replace with a brief description of the project.)</p>
+        </li>
+    </ul>
+    <h2>GitHub Profile</h2>
+    <ul>
+      <li>
+        <strong><a href="https://github.com/mollanegash/" target="_blank">GitHub Profile</a></strong>
+      </li>
+    </ul>
+  </div>
+</section>
  
 
 
