--- a/index.html
+++ b/index.html
@@ -181,9 +181,7 @@ MS in Computer Science | Boston University | Boston, MA | May 2021<br>
 BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
 
 
-      <section id="skills">
-
-    <strong>Technical Skills</strong>
+    <br><strong>TECHNICAL SKILLS</strong></br?
          <ul class="skills-list">
   <li>Programming Languages: Java (Expert), Python (Advanced), R (Intermediate)</li>
   <li>Frameworks & Libraries: Spring Boot (Expert), Spring (Advanced), React (Intermediate), Angular (Intermediate)</li>
