--- a/index.html
+++ b/index.html
@@ -202,7 +202,11 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
       </p>
     </div>
       
-      <p>Feel free to reach out to me at <a href="mailto:mdraya3@gmail.com">mdraya3@gmail.com</a> or call me at +1-617-318-7005.</p>
+     
+
+      <p class="contact-info">
+  Feel free to reach out to me at mdraya3@gmail.com or call me at +1-617-318-7005.
+</p>
     </div> 
   </section>
 <section id="portfolio">
