--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       font-family: Arial, sans-serif;
       background-color: #f1f1f1;
     }
-
+<style>
+  .contact-info {
+    text-align: left;
+  }
     .container {
       max-width: 800px;
       margin: 0 auto;
@@ -204,9 +207,10 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
       
      
 
-      <p class="contact-info">
-  Feel free to reach out to me at mdraya3@gmail.com or call me at +1-617-318-7005.
+     <p class="contact-info" style="text-align: left;">
+  Feel free to reach out to me at <a href="mailto:mdraya3@gmail.com">mdraya3@gmail.com</a> or call me at +1-617-318-7005.
 </p>
+
     </div> 
   </section>
 <section id="portfolio">
