--- a/index.html
+++ b/index.html
@@ -207,9 +207,16 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
       
      
 
-     <p class="contact-info" style="text-align: left;">
+  <style>
+  .contact-info {
+    text-align: left;
+  }
+</style>
+
+<p class="contact-info">
   Feel free to reach out to me at <a href="mailto:mdraya3@gmail.com">mdraya3@gmail.com</a> or call me at +1-617-318-7005.
 </p>
+
 
     </div> 
   </section>
