--- a/index.html
+++ b/index.html
@@ -206,9 +206,10 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
 
 
 
-<p class="contact-info">
-  Feel free to reach out to me at <a href="mailto:mdraya3@gmail.com">mdraya3@gmail.com</a> or call me at +1-617-318-7005.
+<p class="contact-info" style="text-align: center;">
+    Feel free to reach out to me at <a href="mailto:mdraya3@gmail.com">mdraya3@gmail.com</a> or call me at +1-617-318-7005.
 </p>
+
 
 
     </div> 
