--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@ BSc in Economics | Mekelle University | Mekelle, Ethiopia | July 2009<br><br>
      
 
 
-
-<p class="contact-info" style="text-align: justify;">
+<p class="contact-info" style="text-align: left;">
     Feel free to reach out to me at <a href="mailto:mdraya3@gmail.com">mdraya3@gmail.com</a> or call me at +1-617-318-7005.
 </p>
+
 
 
 
